--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,13 @@
     <string name="english">English</string>
     <string name="kelvin">Kelvin</string>
     <string name="fahrenheit">Fahrenheit</string>
+    <string name="cancel">Cancel</string>
+    <string name="open">Open</string>
+    <string name="loading">Loading..!</string>
+    <string name="from">From: </string>
+    <string name="to">To: </string>
+    <string name="time">Time: </string>
+    <string name="zone">Zone: </string>
+    <string name="make_alert">Make Alert</string>
+    <string name="save">Save</string>
 </resources>
